<resources>
    <string name="app_name">Учимся считать</string>
    <string name="exerciseWindow">0</string>
    <string name="answerWindowDefault">Введи ответ</string>
    <string name="counterPositiveDefault">0</string>
    <string name="counterNegativeDefault">0</string>
    <string name="positiveHead">Верно</string>
    <string name="negativeHead">Неверно</string>
    <string name="startButton">Ответить</string>
    <string name="levelDefault">1</string>
    <string name="numberExerciseDefault">1</string>
    <string name="levelHead">Уровень:</string>
    <string name="numberExerciseHead">Пример:</string>
    <string name="checkBoxHead">X</string>
    <string name="waveHead">Звук</string>
    <string name="winWrong">Победа!</string>
    <string name="newGameButton">Старт</string>
    <string name="Wrong">Ты проиграл!</string>
    <string name="clock">Осталось:</string>
    <string name="timer">Таймер</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="closeFrame">Закрыть</string>
    <string name="settingsText">Настройки</string>
    <string name="timerTittle">Таймер</string>
    <string name="soundTittle">Звук</string>
    <string name="multiplyTittle">Таблица умножения</string>
    <string name="numberExerciseTittle">Примеров на уровне:</string>
    <string name="numberErrorTittle">Количество ошибок на уровне:</string>
    <string name="timerDeltaTittle">Таймер+, сек:</string>
    <string name="saveButton">Сохранить</string>
    <string name="newGame">Заново</string>
    <string name="timerLimitTittle">Таймер, сек</string>
    <string name="numberLevelTittle">Число уровней:</string>
    <string name="passTittle">Реши пример:</string>
    <string name="optionsButton">Сначала настрой</string>
</resources>