<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.SettingFragment"
    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/uppSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/backgroundBottom">



        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/settingsText"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:background="@drawable/gradient_start"
            android:textSize="@dimen/startButton"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/numberLevelTittleSlider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numberLevelTittle"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/headers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_title" />

        <com.google.android.material.slider.Slider
            android:id="@+id/numberLevelSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stepSize="1"
            android:valueFrom="1"
            android:valueTo="4"

            app:trackColorInactive="@color/positiveText"
            android:layout_marginHorizontal="5dp"
            app:layout_constraintTop_toBottomOf="@+id/numberLevelTittleSlider"
            app:tickColorActive="@color/answerText"
            app:tickColorInactive="@color/negativeWindow"
            tools:layout_editor_absoluteX="10dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/numberExerciseTittleSlider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numberExerciseTittle"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/headers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_title" />

        <com.google.android.material.slider.Slider
            android:id="@+id/numberExerciseSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stepSize="5"
            android:valueFrom="5"
            android:valueTo="30"

            app:trackColorInactive="@color/positiveText"
            android:layout_marginHorizontal="5dp"
            app:layout_constraintTop_toBottomOf="@+id/numberLevelTittleSlider"
            app:tickColorActive="@color/answerText"
            app:tickColorInactive="@color/negativeWindow"
            tools:layout_editor_absoluteX="10dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/numberErrorTittleSlider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numberErrorTittle"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/headers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_title" />

        <com.google.android.material.slider.Slider
            android:id="@+id/numberErrorSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stepSize="1"
            android:valueFrom="1"
            android:valueTo="5"
            app:trackColorInactive="@color/positiveText"
            android:layout_marginHorizontal="5dp"
            app:layout_constraintTop_toBottomOf="@+id/numberLevelTittleSlider"
            app:tickColorActive="@color/answerText"
            app:tickColorInactive="@color/negativeWindow"
            android:layout_marginBottom="10dp"
            tools:layout_editor_absoluteX="10dp" />



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundBottom">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/timerLimitTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/timerLimitTittle"
                android:textColor="@color/black"
                android:textSize="@dimen/headers"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/timerLimitWindow"
                android:layout_width="50dp"
                android:layout_height="20dp"
                app:layout_constraintTop_toBottomOf="@+id/timerLimitTittle"
                app:layout_constraintStart_toStartOf="@+id/timerLimitTittle"
                app:layout_constraintEnd_toEndOf="@+id/timerLimitTittle"
                android:background="@color/bottom"
                android:layout_marginTop="5dp"
                android:inputType="number"
                android:textSize="@dimen/startButton"
                android:gravity="center"
                android:textColor="@color/negativeWindow"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/timerDeltaTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timerDeltaTittle"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"
                android:textSize="@dimen/headers"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/timerLimitTittle"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/timerDeltaWindow"
                android:layout_width="50dp"
                android:layout_height="20dp"
                app:layout_constraintTop_toBottomOf="@+id/timerDeltaTittle"
                app:layout_constraintStart_toStartOf="@+id/timerDeltaTittle"
                app:layout_constraintEnd_toEndOf="@+id/timerDeltaTittle"
                android:background="@color/bottom"
                android:layout_marginTop="5dp"
                android:inputType="number"
                android:textSize="@dimen/startButton"
                android:gravity="center"
                android:textColor="@color/negativeWindow"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/timerTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timerTittle"
                android:textColor="@color/black"
                android:textSize="@dimen/headers"

                app:layout_constraintEnd_toStartOf="@+id/timerLimitTittle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/timerSwitch"
                android:layout_width="54dp"
                android:layout_height="33dp"
                android:checked="false"
                app:layout_constraintEnd_toEndOf="@+id/timerTittle"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/timerTittle"
                app:layout_constraintTop_toBottomOf="@id/timerTittle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/multiplyTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiplyTittle"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:textSize="@dimen/headers"
                app:layout_constraintEnd_toEndOf="@+id/timerLimitTittle"
                app:layout_constraintStart_toStartOf="@+id/timerLimitTittle"
                app:layout_constraintTop_toBottomOf="@+id/timerLimitWindow" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/multiplySwitch"
                android:layout_width="57dp"
                android:layout_height="28dp"
                android:checked="false"
                app:layout_constraintEnd_toEndOf="@+id/multiplyTittle"
                app:layout_constraintStart_toStartOf="@+id/multiplyTittle"
                app:layout_constraintTop_toBottomOf="@id/multiplyTittle" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/gradient"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/saveButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/multiplySwitch" />





        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.appcompat.widget.LinearLayoutCompat>



</FrameLayout>