<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundBottom"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/exerciseWindow"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/stars"
        android:gravity="center"

        android:textColor="@color/exerciseText"
        android:textSize="@dimen/exerciseWindow"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/answerWindow"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="2dp"
        android:background="@color/answerWindow"
        android:ems="10"
        android:inputType="number"
        android:textSize="@dimen/answerWindow"

        android:textColor="@color/textAnswerWindow"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseWindow" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/levelOneStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/star"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerWindow" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/levelTwoStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:src="@drawable/star"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@id/levelOneStar"
        app:layout_constraintTop_toTopOf="@+id/levelOneStar" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/levelThreeStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:src="@drawable/star"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@id/levelTwoStar"
        app:layout_constraintTop_toTopOf="@+id/levelTwoStar" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/levelSuperStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/super_star"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/optionsButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerWindow" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/exerciseNumberHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/numberExerciseHead"
        android:textSize="@dimen/startButton"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/exerciseNumber"
        app:layout_constraintEnd_toStartOf="@+id/exerciseNumber"
        app:layout_constraintTop_toTopOf="@+id/exerciseNumber" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/exerciseNumber"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@color/numberAsk"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/negativeText"

        android:gravity="center"
        android:textSize="@dimen/startButton"
        app:layout_constraintTop_toBottomOf="@+id/answerWindow" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/trueWindowHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/positiveHead"
        android:textSize="@dimen/startButton"
        android:layout_marginTop="55dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/levelThreeStar"
        app:layout_constraintStart_toStartOf="@+id/levelOneStar"
        app:layout_constraintTop_toBottomOf="@+id/levelTwoStar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/falseWindowHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/negativeHead"
        android:textSize="@dimen/startButton"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/exerciseNumber"
        app:layout_constraintStart_toStartOf="@+id/exerciseNumberHeader"
        app:layout_constraintTop_toBottomOf="@+id/levelTwoStar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/positiveWindow"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"

        android:textSize="@dimen/clock"
        android:gravity="center"
        android:textColor="@color/positiveText"
        android:background="@drawable/gradient"
        app:layout_constraintEnd_toEndOf="@+id/trueWindowHeader"
        app:layout_constraintStart_toStartOf="@+id/trueWindowHeader"
        app:layout_constraintTop_toBottomOf="@+id/trueWindowHeader" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/negativeWindow"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/gradient2"

        android:textColor="@color/negativeText"
        android:textSize="@dimen/clock"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/falseWindowHeader"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="@+id/falseWindowHeader"
        app:layout_constraintTop_toBottomOf="@+id/falseWindowHeader" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@drawable/gradient_start"
        android:gravity="center"
        android:text="@string/startButton"
        android:visibility="invisible"
        android:textColor="@color/black"
        android:textSize="@dimen/startButton"
        app:layout_constraintBottom_toBottomOf="@+id/positiveWindow"
        app:layout_constraintEnd_toStartOf="@+id/negativeWindow"
        app:layout_constraintStart_toEndOf="@+id/positiveWindow"
        app:layout_constraintTop_toTopOf="@+id/positiveWindow" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/optionsButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/options"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/countDown"
        app:layout_constraintStart_toStartOf="@+id/countDown"
        app:layout_constraintTop_toBottomOf="@+id/answerWindow" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/countDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="20dp"
        android:textColor="@color/negativeText"
        android:textSize="@dimen/levelExercise"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="@+id/startButton"
        app:layout_constraintStart_toStartOf="@+id/startButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/returnButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@drawable/gradient_start"
        android:padding="4dp"
        android:text="@string/newGameButton"
        android:textSize="@dimen/startButton"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@id/startButton"
        app:layout_constraintStart_toStartOf="@id/startButton"
        app:layout_constraintTop_toTopOf="@id/startButton"
        tools:layout_editor_absoluteY="248dp" />

    <FrameLayout
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="@+id/startButton" />







</androidx.constraintlayout.widget.ConstraintLayout>